--- a/src/app/pages/profile/profile-edit/profile-edit.component.html
+++ b/src/app/pages/profile/profile-edit/profile-edit.component.html
@@ -1,21 +1,98 @@
 <div class="page">
     <mat-card>
         <mat-card-content>
-            <p>
-                <button type="button" mat-stroked-button (click)="profileImageInput.click()">Choose profile
-                    image</button>
-                <input hidden (change)="onProfileFileSelected($event)" #profileImageInput type="file" />
-                <span class="file-name">
-                    <!-- {{selectedProfileFile?.name}} -->
-                </span>
-&nbsp;
-                <button type="button" mat-stroked-button (click)="profileBannerInput.click()">Choose profile
-                    banner</button>
-                <input hidden (change)="onBannerFileSelected($event)" #profileBannerInput type="file" />
-                <span class="file-name">
-                    <!-- {{selectedBannerFile?.name}} -->
-                </span>
-            </p>
+            <div class="file-upload-section">
+                <div class="section-header">
+                    <h3>Profile Image</h3>
+                    <div class="toggle-container">
+                        <span>File</span>
+                        <mat-slide-toggle
+                            [checked]="useProfileImageUrl()"
+                            (change)="toggleImageInputMethod('profile')"
+                            color="primary">
+                        </mat-slide-toggle>
+                        <span>URL</span>
+                    </div>
+                </div>
+
+                <!-- No media servers warning for file upload mode -->
+                @if (!useProfileImageUrl() && !hasMediaServers()) {
+                    <div class="media-server-warning">
+                        <mat-icon color="warn">warning</mat-icon>
+                        <span>You need to configure a media server to upload image files</span>
+                        <button mat-flat-button color="primary" type="button" (click)="navigateToMediaSettings()">
+                            Configure Media Server
+                        </button>
+                    </div>
+                }
+
+                @if (!useProfileImageUrl()) {
+                    <div class="file-upload">
+                        <button mat-stroked-button type="button" (click)="profileImageInput.click()" [disabled]="!hasMediaServers()">
+                            <mat-icon>upload</mat-icon>
+                            Choose profile image
+                        </button>
+                        <input #profileImageInput type="file" hidden (change)="onFileSelected($event, 'profile')" accept="image/*">
+                        @if (previewProfileImage()) {
+                            <span>File selected</span>
+                        }
+                    </div>
+                } @else {
+                    <mat-form-field appearance="outline" class="input-full-width">
+                        <mat-icon matPrefix>image</mat-icon>
+                        <mat-label>Profile Image URL</mat-label>
+                        <input matInput type="text" [(ngModel)]="profile().pictureUrl" (blur)="onImageUrlChange('profile')" placeholder="https://example.com/image.png" />
+                        <mat-icon matSuffix>link</mat-icon>
+                    </mat-form-field>
+                }
+            </div>
+
+            <div class="file-upload-section">
+                <div class="section-header">
+                    <h3>Profile Banner</h3>
+                    <div class="toggle-container">
+                        <span>File</span>
+                        <mat-slide-toggle
+                            [checked]="useBannerUrl()"
+                            (change)="toggleImageInputMethod('banner')"
+                            color="primary">
+                        </mat-slide-toggle>
+                        <span>URL</span>
+                    </div>
+                </div>
+
+                <!-- No media servers warning for file upload mode -->
+                @if (!useBannerUrl() && !hasMediaServers()) {
+                    <div class="media-server-warning">
+                        <mat-icon color="warn">warning</mat-icon>
+                        <span>You need to configure a media server to upload banner files</span>
+                        <button mat-flat-button color="primary" type="button" (click)="navigateToMediaSettings()">
+                            Configure Media Server
+                        </button>
+                    </div>
+                }
+
+                @if (!useBannerUrl()) {
+                    <div class="file-upload">
+                        <button mat-stroked-button type="button" (click)="profileBannerInput.click()" [disabled]="!hasMediaServers()">
+                            <mat-icon>upload</mat-icon>
+                            Choose profile banner
+                        </button>
+                        <input #profileBannerInput type="file" hidden (change)="onFileSelected($event, 'banner')" accept="image/*">
+                        @if (previewBanner()) {
+                            <span>File selected</span>
+                        }
+                    </div>
+                } @else {
+                    <mat-form-field class="input-full-width">
+                        <mat-icon matPrefix>image</mat-icon>
+                        <mat-label>Profile Banner URL</mat-label>
+                        <input matInput type="text" [(ngModel)]="profile().bannerUrl" (blur)="onImageUrlChange('banner')" placeholder="https://example.com/banner.png" />
+                        <mat-icon matSuffix>link</mat-icon>
+                    </mat-form-field>
+                }
+            </div>
+
             @if (profile()) {
             <p>
                 <mat-form-field class="input-full-width">
