--- a/src/app/pages/profile/profile-edit/profile-edit.component.scss
+++ b/src/app/pages/profile/profile-edit/profile-edit.component.scss
@@ -31,6 +31,8 @@
         display: flex;
         align-items: center;
         gap: 16px;
+        margin-top: 20px;
+        margin-bottom: 44px;
     }
 }
 
