--- a/src/app/components/rich-text-editor/rich-text-editor.component.html
+++ b/src/app/components/rich-text-editor/rich-text-editor.component.html
@@ -1,4 +1,20 @@
-<div class="rich-editor-container">
+<div class="rich-editor-container" 
+     [class.drag-over]="isDragOver()"
+     (dragenter)="onDragEnter($event)"
+     (dragover)="onDragOver($event)"
+     (dragleave)="onDragLeave($event)"
+     (drop)="onDrop($event)">
+  
+  <!-- Hidden file input -->
+  <input #fileInput 
+         type="file" 
+         multiple 
+         accept="image/*,video/*,audio/*,.pdf,.doc,.docx,.txt,.zip,.rar"
+         (change)="onFileSelected($event)" 
+         class="hidden-file-input"
+         aria-label="Upload files"
+         title="Upload files">
+  
   <div class="editor-toolbar">
     @if (isRichTextMode()) {
       <div class="formatting-controls">
@@ -55,6 +71,30 @@
                 matTooltip="Insert Code">
           <mat-icon>code</mat-icon>
         </button>
+        <mat-divider [vertical]="true"></mat-divider>
+        <button mat-icon-button 
+                (click)="openFileDialog()" 
+                [disabled]="isUploading()"
+                matTooltip="Upload Files">
+          @if (isUploading()) {
+            <mat-icon>hourglass_empty</mat-icon>
+          } @else {
+            <mat-icon>attach_file</mat-icon>
+          }
+        </button>
+      </div>
+    } @else {
+      <div class="markdown-controls">
+        <button mat-icon-button 
+                (click)="openFileDialog()" 
+                [disabled]="isUploading()"
+                matTooltip="Upload Files">
+          @if (isUploading()) {
+            <mat-icon>hourglass_empty</mat-icon>
+          } @else {
+            <mat-icon>attach_file</mat-icon>
+          }
+        </button>
       </div>
     }
     <div class="editor-mode-toggle">
@@ -78,6 +118,22 @@
   </div>
 
   <div class="editor-content-area">
+    @if (isUploading()) {
+      <div class="upload-progress">
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        <span>Uploading files...</span>
+      </div>
+    }
+    
+    @if (isDragOver()) {
+      <div class="drag-overlay">
+        <div class="drag-message">
+          <mat-icon>cloud_upload</mat-icon>
+          <p>Drop files here to upload</p>
+        </div>
+      </div>
+    }
+    
     @if (isRichTextMode()) {
       <div #editorContent 
            class="rich-text-content" 
