--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -1,4 +1,3 @@
-<p>
 <div class="note-editor-dialog">
   <div mat-dialog-title class="dialog-header">
     <span>
@@ -128,7 +127,7 @@
       </ng-container>
       } @else {
       <ng-container>
-        <mat-icon>send</mat-icon>
+        <!-- <mat-icon>send</mat-icon> -->
         Publish Note
       </ng-container>
       }
