refactor: remove maxlength attribute from note textarea for improved user experience

--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -54,8 +54,8 @@
     <div class="content-editor-section">
       <mat-form-field appearance="outline" class="content-field">
         <mat-label>What's on your mind?</mat-label>
-        <textarea matInput [(ngModel)]="content" placeholder="Write your note..." rows="4" maxlength="280"
-          class="content-textarea" #contentTextarea>
+        <textarea matInput [(ngModel)]="content" placeholder="Write your note..." rows="4" class="content-textarea"
+          #contentTextarea>
         </textarea>
         <mat-hint align="end">
           {{ characterCount() }} characters
