--- a/src/app/pages/messages/messages.component.html
+++ b/src/app/pages/messages/messages.component.html
@@ -14,10 +14,14 @@
 
 
   <div class="messages-left">
-    <div class="message-threads-header">Chats
-      <button mat-icon-button aria-label="New chat" (click)="startNewChat()">
-        <mat-icon>edit</mat-icon>
-      </button>
+    <div class="message-threads-header">
+      <h2>Chats</h2>
+      <div class="spacer"></div>
+      <div>
+        <button mat-icon-button aria-label="New chat" (click)="startNewChat()">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </div>
     </div>
     <div class="message-threads">
 
@@ -42,29 +46,42 @@
                 (click)="selectChat(chat)">
                 <div class="chat-item-content">
                   <div class="chat-avatar">
-                    <app-user-profile [pubkey]="chat.pubkey" view="small"></app-user-profile>
+                    <app-user-profile [pubkey]="chat.pubkey" view="icon" #profileComp>
+
+                      <!-- {{ profileComp.profile() }} -->
+
+                      <div class="chat-info">
+                        <div class="chat-name-row">
+                          <span class="chat-name">
+                            @if (profileComp.profile()) {
+                            {{ profileComp.profile().data | name }}
+                            } @else {
+                              Unknown
+                            }
+                          </span>
+                          @if (chat.unreadCount > 0) {
+                          <span class="unread-badge" matBadge="{{ chat.unreadCount }}" matBadgeOverlap="false"></span>
+                          }
+                          <span class="message-time-chats">{{ chat.lastMessage?.created_at | ago }}</span>
+                        </div>
+                        <div class="chat-preview">
+                          @if (chat.lastMessage) {
+                          <span class="message-preview">
+                            @if (chat.lastMessage?.isOutgoing) {
+                            <span class="outgoing-prefix">You: </span>
+                            }
+                            {{ chat.lastMessage?.content }}
+                          </span>
+                          <!-- <span class="message-time">{{ chat.lastMessage?.created_at | ago }}</span> -->
+                          } @else {
+                          <span class="message-preview empty-message">New conversation</span>
+                          }
+                        </div>
+                      </div>
+
+                    </app-user-profile>
                   </div>
-                  <div class="chat-info">
-                    <div class="chat-name-row">
-                      <span class="chat-name">{{ chat.pubkey | npub }}</span>
-                      @if (chat.unreadCount > 0) {
-                      <span class="unread-badge" matBadge="{{ chat.unreadCount }}" matBadgeOverlap="false"></span>
-                      }
-                    </div>
-                    <div class="chat-preview">
-                      @if (chat.lastMessage) {
-                      <span class="message-preview">
-                        @if (chat.lastMessage?.isOutgoing) {
-                        <span class="outgoing-prefix">You: </span>
-                        }
-                        {{ chat.lastMessage?.content }}
-                      </span>
-                      <span class="message-time">{{ chat.lastMessage?.created_at | ago }}</span>
-                      } @else {
-                      <span class="message-preview empty-message">New conversation</span>
-                      }
-                    </div>
-                  </div>
+
                 </div>
               </a>
               }
@@ -200,7 +217,7 @@
       }
     </div>
 
-    <div class="message-list">
+    <div class="message-list messages-wrapper" #messagesWrapper>
 
       @if (hasMoreMessages() && !isLoadingMore()) {
       <div class="load-more-indicator">
@@ -465,6 +482,8 @@
           }
           <app-user-profile [pubkey]="selectedChat()!.pubkey" view="thread"></app-user-profile>
         </div>
+
+        <div class="chat-header-spacer"></div>
 
         <div class="chat-header-actions">
           <button mat-icon-button [matMenuTriggerFor]="menuChat">
